--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,8 +1,9 @@
-ledgersmb (1.3.14-2) UNRELEASED; urgency=low
+ledgersmb (1.3.14-2~1) UNRELEASED; urgency=low
 
-  * Start v1.3.14-2 development 
+  * Add patches/20_LedgerSMB-Form-pod.patch to correct spelling error.
+  * Add lintian override for empty directory ledgersmb/sql/coa/ar/gifi/.
 
- -- Robert James Clay <jame@rocasa.us>  Tue, 03 Apr 2012 21:57:55 -0400
+ -- Robert James Clay <jame@rocasa.us>  Tue, 03 Apr 2012 22:40:17 -0400
 
 ledgersmb (1.3.14-1) experimental; urgency=low
 
