--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-ledgersmb (1.3.14-2~1) UNRELEASED; urgency=low
+ledgersmb (1.3.14-2~2) UNRELEASED; urgency=low
 
+  * Initial addition of debconf/dbconcig to ledgersmb.
   * Add patches/20_LedgerSMB-Form-pod.patch to correct spelling error.
   * Add lintian override for empty directory ledgersmb/sql/coa/ar/gifi/.
 
- -- Robert James Clay <jame@rocasa.us>  Tue, 03 Apr 2012 22:40:17 -0400
+ -- Robert James Clay <jame@rocasa.us>  Thu, 05 Apr 2012 08:20:40 -0400
 
 ledgersmb (1.3.14-1) experimental; urgency=low
 
