--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ledgersmb (1.3.15~rc2-1~1) UNRELEASED; urgency=low
+
+  * Second Release Candidate for a new upstream release.
+  * Changes for debian/patches/*:
+    - Remove unneeded patches/8*patch files resulting from an incomplete merge.
+
+ -- Robert James Clay <jame@rocasa.us>  Fri, 13 Apr 2012 08:55:16 -0400
+
 ledgersmb (1.3.14-2) experimental; urgency=low
 
   * Add initial version of the debian/NEWS file.
