--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,10 +1,13 @@
 ledgersmb (1.3.15~rc2-1~1) UNRELEASED; urgency=low
 
   * Second Release Candidate for a new upstream release.
+  * Correct permissions for ledgersmb/tools/*.pl files in debian/rules.
   * Changes for debian/patches/*:
-    - Remove unneeded patches/8*patch files resulting from an incomplete merge.
+    - Remove 10_Makefile-PL.patch as it is no longer needed.
+    - Remove 20_LedgerSMB-Form-pod.patch as its issue has been resolved.
+    - Remove unneeded 8* series patch files resulting from an incomplete merge.
 
- -- Robert James Clay <jame@rocasa.us>  Fri, 13 Apr 2012 08:55:16 -0400
+ -- Robert James Clay <jame@rocasa.us>  Fri, 13 Apr 2012 12:07:28 -0400
 
 ledgersmb (1.3.14-2) experimental; urgency=low
 
