--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,13 +1,14 @@
-ledgersmb (1.3.15-1~1) UNRELEASED; urgency=low
+ledgersmb (1.3.15-1) experimental; urgency=low
 
   * New upstream release.
+  * Change the variable names used in the debconf/dbconfig scripting.
   * Correct permissions for ledgersmb/tools/*.pl files in debian/rules.
   * Changes for debian/patches/*:
     - Remove 10_Makefile-PL.patch as it is no longer needed.
     - Remove 20_LedgerSMB-Form-pod.patch as its issue has been resolved.
     - Remove unneeded 8* series patch files resulting from an incomplete merge.
 
- -- Robert James Clay <jame@rocasa.us>  Tue, 17 Apr 2012 06:05:28 -0400
+ -- Robert James Clay <jame@rocasa.us>  Tue, 17 Apr 2012 16:11:20 -0400
 
 ledgersmb (1.3.14-2) experimental; urgency=low
 
