--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.3.15-2~1) UNRELEASED; urgency=low
+
+  * Start development for v1.3.15-2.
+
+ -- Robert James Clay <jame@rocasa.us>  Tue, 17 Apr 2012 19:22:10 -0400
+
 ledgersmb (1.3.15-1) experimental; urgency=low
 
   * New upstream release.
