--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,8 +1,13 @@
-ledgersmb (1.3.15-2~1) UNRELEASED; urgency=low
+ledgersmb (1.3.15-2) experimental; urgency=low
 
-  * Start development for v1.3.15-2.
+  * Rewrite LedgerSMB README.Debian, including database related information.
+  * Correct debconf variable lsmb_debconf to debconf_install in debian/postinst.
+  * Changes for debian/patches/*:
+    - Renumber 15_httpdconf.patch as 10_httpdconf.patch. 
+    - Add 15_UI-setup-credentials.patch to set 'ledgersmb' as the default
+      database superuser for setup.pl.
 
- -- Robert James Clay <jame@rocasa.us>  Tue, 17 Apr 2012 19:22:10 -0400
+ -- Robert James Clay <jame@rocasa.us>  Wed, 18 Apr 2012 18:58:20 -0400
 
 ledgersmb (1.3.15-1) experimental; urgency=low
 
