--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,25 @@
-ledgersmb (1.3.15~rc2-1~1) UNRELEASED; urgency=low
+ledgersmb (1.3.15-2) experimental; urgency=low
 
-  * Second Release Candidate for a new upstream release.
+  * Rewrite LedgerSMB README.Debian, including database related information.
+  * Correct debconf variable lsmb_debconf to debconf_install in debian/postinst.
+  * Changes for debian/patches/*:
+    - Renumber 15_httpdconf.patch as 10_httpdconf.patch. 
+    - Add 15_UI-setup-credentials.patch to set 'ledgersmb' as the default
+      database superuser for setup.pl.
+
+ -- Robert James Clay <jame@rocasa.us>  Wed, 18 Apr 2012 18:58:20 -0400
+
+ledgersmb (1.3.15-1) experimental; urgency=low
+
+  * New upstream release.
+  * Change the variable names used in the debconf/dbconfig scripting.
   * Correct permissions for ledgersmb/tools/*.pl files in debian/rules.
   * Changes for debian/patches/*:
     - Remove 10_Makefile-PL.patch as it is no longer needed.
     - Remove 20_LedgerSMB-Form-pod.patch as its issue has been resolved.
     - Remove unneeded 8* series patch files resulting from an incomplete merge.
 
- -- Robert James Clay <jame@rocasa.us>  Fri, 13 Apr 2012 12:07:28 -0400
+ -- Robert James Clay <jame@rocasa.us>  Tue, 17 Apr 2012 16:11:20 -0400
 
 ledgersmb (1.3.14-2) experimental; urgency=low
 
