--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-ledgersmb (1.2.25-2~1b) UNRELEASED; urgency=low
+ledgersmb (1.2.26-1) UNRELEASED; urgency=low
+
+  * Start packaging v1.2.26 release.
+
+ -- Robert James Clay <jame@rocasa.us>  Mon, 30 Apr 2012 22:56:08 -0400
+
+ledgersmb (1.2.25-2) experimental; urgency=low
 
   TODO: Until such time as a new release in the v1.2 series becomes available,
         update the v1.2 series Debian packaging as necessary or needed. For
