--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.3.16~rc1-1~1) UNRELEASED; urgency=low
+
+  * New release candidate 1.3.16 rc1.
+
+ -- Robert James Clay <jame@rocasa.us>  Tue, 01 May 2012 08:07:54 -0400
+
 ledgersmb (1.3.15-2) experimental; urgency=low
 
   * Rewrite LedgerSMB README.Debian, including database related information.
