--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ledgersmb (1.3.16~rc1-1~1) UNRELEASED; urgency=low
+ledgersmb (1.3.16-1~1) UNRELEASED; urgency=low
 
-  * New release candidate 1.3.16 rc1.
+  * New release, v1.3.16.
 
- -- Robert James Clay <jame@rocasa.us>  Tue, 01 May 2012 08:07:54 -0400
+ -- Robert James Clay <jame@rocasa.us>  Mon, 07 May 2012 08:46:01 -0400
 
 ledgersmb (1.3.15-2) experimental; urgency=low
 
