--- a/ledger-smb/trunk/debian/NEWS
+++ b/ledger-smb/trunk/debian/NEWS
@@ -1,9 +1,10 @@
-ledgersmb (1.3.14-2) experimental; urgency=low
+ledgersmb (1.3.16-1) experimental; urgency=low
 
   Now have experimental dbconfig/debconf usage for configuring LedgerSMB during
   the package installation.  Because it is experimental, the default is to not
   use it;  instead what can be done is to manually create the ledgersmb database
   user and use that in the http://localhost/ledgersmb/setup.pl script to create
-  the company databases for use.
+  the company databases for use. More information regarding this is available
+  in /usr/share/doc/ledgersmb/README.Debian.
 
- -- Robert James Clay <jame@rocasa.us>  Wed, 11 Apr 2012 15:28:31 -0400
+ -- Robert James Clay <jame@rocasa.us>  Mon, 07 May 2012 14:49:28 -0400
