--- a/ledger-smb/trunk/debian/TODO
+++ b/ledger-smb/trunk/debian/TODO
@@ -1,14 +1,16 @@
 debian/TODO for LedgerSMB v1.3
 
-- The dbconfig configuration is apparantly capable of creating the ledgersmb
-user but it is not getting created with the necessary permissions.
+- Add libexcel-template-plus-perl and libtemplate-plugin-latex-perl to at
+least Suggests in debian/control.
 
-- The dbconfig configuration is apparantly automatically creating a database
-named ledgersmb when it creates the ledgersmb user.  The owner of it can 
-come up as postgres;  should make that ledgersmb.
+- The dbconfig configuration is apparently capable of creating the ledgersmb
+user but it is not getting created with the necessary permissions. It is also
+apparently automatically creating a database named ledgersmb when it creates
+that user.  The owner of it can come up as postgres; should make that
+ledgersmb, if the database is even needed.
 
 - Review the tools/* shell and perl scripts to see what if any need changes for
-usage on a debian installation.
+usage on a Debian installation.
 
 - Upstream uses pdflatex to create distribution LedgerSMB-manual.pdf from the
 source file doc/manual/LedgerSMB-manual.tex. Use the same source file to create
@@ -16,17 +18,16 @@ an HTML version?
 
 - The package installs the LedgerSMB css directory to /var/lib/ledgersmb/css,
 but the application itself currently expects it to be in the main installation
-directory; reference also upstream bug # 3516730. (A symbolic link is installed
-with the current packaging as a workaround for the issue.)
+directory; reference also upstream bug # 3516730. (A symbolic link pointing to
+it is installed with the current packaging as a workaround for the issue.)
 
-- The templates directory had been getting installed to /etc/ledgersmb/templates.
-Should that be /var/lib/ledgersmb/templates instead? (There is also an issue 
-with editing templates online; reference upstream bug # 3516725 regarding that.)
+- The templates directory has been getting installed to the directory
+/etc/ledgersmb/templates. Should that be /var/lib/ledgersmb/templates instead?
 
 - New 1.3 version of LedgerSMB contains an embedded javascript library. The
 embedded version appears to be 1.8.2.  The library is available in Debian as the
 package libjs-scriptaculous:  v1.8.1 in lenny (current oldstable), v1.8.3 in
-lenny-backports, v1.8.3 in squeeze, v1.9.0 in wheezy. Provide a Lintian override
+lenny-backports and squeeze, v1.9.0 in wheezy and sid. Provide a Lintian override
 with description of issue, until otherwise resolved.
   From Chris Travers in the Ledger-smb-devel mailing list:
   "I don't know of any testing we have done on other versions.  We don't use a
@@ -40,4 +41,4 @@ Debian. Ref: http://lists.debian.org/debian-devel-announce/2012/03/msg00013.html
 at least regarding packaging guidelines.
 
 
- -- Robert James Clay <jame@rocasa.us>  Wed, 11 Apr 2012 14:41:15 -0500
+ -- Robert James Clay <jame@rocasa.us>  Mon,  7 May 2012 15:04:55 -0400
