--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,8 +1,12 @@
-ledgersmb (1.3.16-1~1) UNRELEASED; urgency=low
+ledgersmb (1.3.16-1~2) UNRELEASED; urgency=low
 
   * New release, v1.3.16.
+  * Update and rewrite debian/TODO and README.Debian
+  * Update debian/NEWS, debian/templates and README.Debian regarding the initial
+    configuration of the package.
+  * Add update of PostgreSQL contrib_dir variable to patches/05_confdir.patch.
 
- -- Robert James Clay <jame@rocasa.us>  Mon, 07 May 2012 08:46:01 -0400
+ -- Robert James Clay <jame@rocasa.us>  Mon, 07 May 2012 15:08:56 -0400
 
 ledgersmb (1.3.15-2) experimental; urgency=low
 
