--- a/ledger-smb/trunk/debian/po/templates.pot
+++ b/ledger-smb/trunk/debian/po/templates.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ledgersmb\n"
 "Report-Msgid-Bugs-To: ledgersmb@packages.debian.org\n"
-"POT-Creation-Date: 2012-04-07 20:31-0400\n"
+"POT-Creation-Date: 2012-05-08 08:17-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -58,5 +58,8 @@ msgstr ""
 #: ../templates:3001
 msgid ""
 "The configuration program for the package can automatically configure "
-"LedgerSMB, at least and especially for the LedgerSMB Database User."
+"LedgerSMB, at least and especially for the LedgerSMB Database User. It is, "
+"however, expermental;  it may not be fully operational, and therefore the "
+"current default is to not run it.  Information about the initial "
+"configuration of the application can be found in README.Debian."
 msgstr ""
