--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,4 +1,4 @@
-ledgersmb (1.3.16-1) experimental; urgency=low
+ledgersmb (1.3.16-1) unstable; urgency=low
 
   Now have experimental dbconfig/debconf usage for configuring LedgerSMB during
   the package installation.  Because it is experimental, the default is to not
@@ -6,5 +6,6 @@ ledgersmb (1.3.16-1) experimental; urgency=low
   user and use that in the http://localhost/ledgersmb/setup.pl script to create
   the company databases for use. More information regarding this is available
   in /usr/share/doc/ledgersmb/README.Debian.
+  
 
- -- Robert James Clay <jame@rocasa.us>  Mon, 07 May 2012 14:49:28 -0400
+ -- Robert James Clay <jame@rocasa.us>  Tue, 08 May 2012 08:49:46 -0400
