--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,15 @@
-ledgersmb (1.3.16~rc1-1~1) UNRELEASED; urgency=low
+ledgersmb (1.3.16-1) unstable; urgency=low
 
-  * New release candidate 1.3.16 rc1.
+  * New upstream release.
+  * Resolves package ITP. (Closes: #406935)
+  * Update and rewrite debian/TODO and README.Debian.
+  * Update debian/NEWS, debian/templates and README.Debian regarding the initial
+    configuration of the package.
+  * Add update of PostgreSQL contrib_dir variable to patches/05_confdir.patch.
 
- -- Robert James Clay <jame@rocasa.us>  Tue, 01 May 2012 08:07:54 -0400
+ -- Robert James Clay <jame@rocasa.us>  Tue, 08 May 2012 07:55:30 -0400
 
-ledgersmb (1.3.15-2) experimental; urgency=low
+ledgersmb (1.3.15-2) unstable; urgency=low
 
   * Rewrite LedgerSMB README.Debian, including database related information.
   * Correct debconf variable lsmb_debconf to debconf_install in debian/postinst.
