--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.3.17~rc1-1~1) UNRELEASED; urgency=low
+
+  * Release candidate RC1 for new upstream release.
+
+ -- Robert James Clay <jame@rocasa.us>  Tue, 15 May 2012 07:29:08 -0400
+
 ledgersmb (1.3.16-1) unstable; urgency=low
 
   * New upstream release.
