--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,8 +1,8 @@
-ledgersmb (1.3.17~rc1-1~1) UNRELEASED; urgency=low
+ledgersmb (1.3.17~rc1-1) experimental; urgency=low
 
   * Release candidate RC1 for new upstream release.
 
- -- Robert James Clay <jame@rocasa.us>  Tue, 15 May 2012 07:29:08 -0400
+ -- Robert James Clay <jame@rocasa.us>  Tue, 15 May 2012 11:06:49 -0400
 
 ledgersmb (1.3.16-1) unstable; urgency=low
 
